fix article images showing too large on large screens

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -494,10 +494,19 @@ img.article {
 
 @media only screen and (min-width: 768px){
   img.article {
-    width: calc(100% - 20px);
+    max-height: 100%;
+    max-width: 100%;
+    width: auto;
     position: absolute;
     top: 50%;
-    transform: translateY(-50%);
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
+
+@media only screen and (max-width: 991px){
+  img.article {
+    
   }
 }
 
